@@ -16,21 +16,21 @@
  *
  *
  */
+
 package springfox.documentation.service;
 
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
-
+import java.util.ArrayList;
 import java.util.List;
+import java.util.function.Predicate;
 
-import static com.google.common.collect.Lists.*;
+import static java.util.Collections.unmodifiableList;
+import static java.util.stream.Collectors.toList;
 import static springfox.documentation.builders.BuilderDefaults.nullToEmptyList;
 
 public abstract class SecurityScheme {
   protected final String name;
   protected final String type;
-  private final List<VendorExtension> vendorExtensions = newArrayList();
+  private final List<VendorExtension> vendorExtensions = new ArrayList();
 
   protected SecurityScheme(String name, String type) {
     this.type = type;
@@ -46,17 +46,17 @@ public abstract class SecurityScheme {
   }
 
   public List<VendorExtension> getVendorExtensions() {
-    return ImmutableList.copyOf(vendorExtensions);
+    return unmodifiableList(vendorExtensions);
   }
 
   protected void addValidVendorExtensions(List<VendorExtension> vendorExtensions) {
-    this.vendorExtensions.addAll(FluentIterable.from(nullToEmptyList(vendorExtensions))
+    this.vendorExtensions.addAll(nullToEmptyList(vendorExtensions).stream()
         .filter(new Predicate<VendorExtension>() {
           @Override
-          public boolean apply(VendorExtension input) {
+          public boolean test(VendorExtension input) {
             return input.getName().toLowerCase().startsWith("x-");
           }
         })
-        .toList());
+        .collect(toList()));
   }
 }
