@@ -18,8 +18,8 @@
  */
 package springfox.documentation.spring.data.rest;
 
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
+
+
 import org.springframework.data.mapping.Association;
 import org.springframework.data.mapping.PersistentEntity;
 import org.springframework.data.mapping.PersistentProperty;
@@ -27,16 +27,20 @@ import org.springframework.data.mapping.SimpleAssociationHandler;
 import org.springframework.data.rest.webmvc.mapping.Associations;
 import springfox.documentation.RequestHandler;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.function.Function;
+import java.util.stream.StreamSupport;
 
-import static com.google.common.collect.Lists.*;
+
+import static java.util.stream.Collectors.toList;
 
 public class EntityAssociationsExtractor implements EntityOperationsExtractor {
 
 
   @Override
   public List<RequestHandler> extract(final EntityContext context) {
-    final List<RequestHandler> handlers = newArrayList();
+    final List<RequestHandler> handlers = new ArrayList();
     final PersistentEntity<?, ?> entity = context.entity();
     final Associations associations = context.getAssociations();
 
@@ -49,9 +53,9 @@ public class EntityAssociationsExtractor implements EntityOperationsExtractor {
           return;
         }
         final EntityAssociationContext associationContext = new EntityAssociationContext(context, association);
-        handlers.addAll(FluentIterable.from(context.getAssociationExtractors())
-            .transformAndConcat(extractHandlers(associationContext))
-            .toList());
+        handlers.addAll(context.getAssociationExtractors().stream()
+            .map(extractHandlers(associationContext)).flatMap(each -> StreamSupport.stream(each.spliterator(), false))
+            .collect(toList()));
       }
     });
     return handlers;
