@@ -32,10 +32,8 @@ import com.fasterxml.jackson.databind.introspect.AnnotatedMember;
 import com.fasterxml.jackson.databind.introspect.AnnotatedMethod;
 import com.fasterxml.jackson.databind.introspect.AnnotatedParameter;
 import com.fasterxml.jackson.databind.introspect.BeanPropertyDefinition;
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
+
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -58,12 +56,20 @@ import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
 import java.util.Map;
+import java.util.Set;
+import java.util.TreeSet;
+import java.util.function.Function;
+import java.util.function.Predicate;
+import java.util.stream.StreamSupport;
 
-import static com.google.common.collect.FluentIterable.*;
-import static com.google.common.collect.Iterables.*;
-import static com.google.common.collect.Lists.*;
-import static com.google.common.collect.Maps.*;
+
+import static java.util.Collections.singletonList;
+import static java.util.Optional.ofNullable;
+import static java.util.function.Function.identity;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
 import static springfox.documentation.schema.Annotations.*;
 import static springfox.documentation.schema.ResolvedTypes.*;
 import static springfox.documentation.schema.property.BeanPropertyDefinitions.*;
@@ -118,21 +124,22 @@ public class OptimizedModelPropertiesProvider implements ModelPropertiesProvider
     return propertiesFor(type, givenContext, "");
   }
 
+  // List cannot contain duplicated byPropertyName()
   private List<ModelProperty> propertiesFor(ResolvedType type, ModelContext givenContext, String namePrefix) {
-    List<ModelProperty> properties = newArrayList();
+    Set<ModelProperty> properties = new TreeSet<>(byPropertyName());
     BeanDescription beanDescription = beanDescription(type, givenContext);
-    Map<String, BeanPropertyDefinition> propertyLookup = uniqueIndex(beanDescription.findProperties(),
-        BeanPropertyDefinitions.beanPropertyByInternalName());
+    Map<String, BeanPropertyDefinition> propertyLookup = beanDescription.findProperties().stream().collect(toMap(
+        beanPropertyByInternalName(), identity()));
     for (Map.Entry<String, BeanPropertyDefinition> each : propertyLookup.entrySet()) {
       LOG.debug("Reading property {}", each.getKey());
       BeanPropertyDefinition jacksonProperty = each.getValue();
       Optional<AnnotatedMember> annotatedMember
-          = Optional.fromNullable(safeGetPrimaryMember(jacksonProperty));
+          = ofNullable(safeGetPrimaryMember(jacksonProperty));
       if (annotatedMember.isPresent()) {
         properties.addAll(candidateProperties(type, annotatedMember.get(), jacksonProperty, givenContext, namePrefix));
       }
     }
-    return FluentIterable.from(properties).toSortedSet(byPropertyName()).asList();
+    return properties.stream().collect(toList());
   }
 
   private Comparator<ModelProperty> byPropertyName() {
@@ -172,9 +179,9 @@ public class OptimizedModelPropertiesProvider implements ModelPropertiesProvider
                     namePrefix,
                     unwrappedPrefix(jacksonProperty.getPrimaryMember())));
           }
-          return newArrayList(beanModelProperty(input, jacksonProperty, givenContext, namePrefix));
+          return singletonList(beanModelProperty(input, jacksonProperty, givenContext, namePrefix));
         }
-        return newArrayList();
+        return new ArrayList();
       }
     };
   }
@@ -198,9 +205,9 @@ public class OptimizedModelPropertiesProvider implements ModelPropertiesProvider
                     namePrefix,
                     unwrappedPrefix(jacksonProperty.getPrimaryMember())));
           }
-          return newArrayList(fieldModelProperty(input, jacksonProperty, givenContext, namePrefix));
+          return singletonList(fieldModelProperty(input, jacksonProperty, givenContext, namePrefix));
         }
-        return newArrayList();
+        return new ArrayList();
       }
     };
   }
@@ -212,15 +219,15 @@ public class OptimizedModelPropertiesProvider implements ModelPropertiesProvider
       ModelContext givenContext,
       String namePrefix) {
 
-    List<ModelProperty> properties = newArrayList();
+    List<ModelProperty> properties = new ArrayList();
     if (member instanceof AnnotatedMethod) {
       properties.addAll(findAccessorMethod(type, member)
-          .transform(propertyFromBean(givenContext, jacksonProperty, namePrefix))
-          .or(new ArrayList<ModelProperty>()));
+          .map(propertyFromBean(givenContext, jacksonProperty, namePrefix))
+          .orElse(new ArrayList<ModelProperty>()));
     } else if (member instanceof AnnotatedField) {
       properties.addAll(findField(type, jacksonProperty.getInternalName())
-          .transform(propertyFromField(givenContext, jacksonProperty, namePrefix))
-          .or(new ArrayList<ModelProperty>()));
+          .map(propertyFromField(givenContext, jacksonProperty, namePrefix))
+          .orElse(new ArrayList<ModelProperty>()));
     } else if (member instanceof AnnotatedParameter) {
       ModelContext modelContext = ModelContext.fromParent(givenContext, type);
       properties.addAll(
@@ -231,14 +238,15 @@ public class OptimizedModelPropertiesProvider implements ModelPropertiesProvider
               modelContext,
               namePrefix));
     }
-    return from(properties).filter(hiddenProperties()).toList();
+    List<ModelProperty> value = properties.stream().filter(hiddenProperties()).collect(toList());
+    return value;
 
   }
 
   private Predicate<? super ModelProperty> hiddenProperties() {
     return new Predicate<ModelProperty>() {
       @Override
-      public boolean apply(ModelProperty input) {
+      public boolean test(ModelProperty input) {
         return !input.isHidden();
       }
     };
@@ -248,11 +256,11 @@ public class OptimizedModelPropertiesProvider implements ModelPropertiesProvider
       ResolvedType resolvedType,
       final String fieldName) {
 
-    return tryFind(fields.in(resolvedType), new Predicate<ResolvedField>() {
-      public boolean apply(ResolvedField input) {
+    return StreamSupport.stream(fields.in(resolvedType).spliterator(), false).filter(new Predicate<ResolvedField>() {
+      public boolean test(ResolvedField input) {
         return fieldName.equals(input.getName());
       }
-    });
+    }).findFirst();
   }
 
   private ModelProperty fieldModelProperty(
@@ -373,12 +381,12 @@ public class OptimizedModelPropertiesProvider implements ModelPropertiesProvider
   }
 
   private Optional<ResolvedMethod> findAccessorMethod(ResolvedType resolvedType, final AnnotatedMember member) {
-    return tryFind(accessors.in(resolvedType), new Predicate<ResolvedMethod>() {
-      public boolean apply(ResolvedMethod accessorMethod) {
+    return StreamSupport.stream(accessors.in(resolvedType).spliterator(), false).filter(new Predicate<ResolvedMethod>() {
+      public boolean test(ResolvedMethod accessorMethod) {
         SimpleMethodSignatureEquality methodComparer = new SimpleMethodSignatureEquality();
-        return methodComparer.equivalent(accessorMethod.getRawMember(), (Method) member.getMember());
+        return methodComparer.test(accessorMethod.getRawMember(), (Method) member.getMember());
       }
-    });
+    }).findFirst();
   }
 
   private List<ModelProperty> fromFactoryMethod(
@@ -389,16 +397,16 @@ public class OptimizedModelPropertiesProvider implements ModelPropertiesProvider
       final String namePrefix) {
 
     Optional<ModelProperty> property = factoryMethods.in(resolvedType, factoryMethodOf(member))
-        .transform(new Function<ResolvedParameterizedMember, ModelProperty>() {
+        .map(new Function<ResolvedParameterizedMember, ModelProperty>() {
           @Override
           public ModelProperty apply(ResolvedParameterizedMember input) {
             return paramModelProperty(input, beanProperty, member, givenContext, namePrefix);
           }
         });
     if (property.isPresent()) {
-      return newArrayList(property.get());
+      return singletonList(property.get());
     }
-    return newArrayList();
+    return new ArrayList();
   }
 
   private BeanDescription beanDescription(ResolvedType type, ModelContext context) {
