@@ -20,10 +20,9 @@
 package springfox.documentation.spi.service.contexts;
 
 import com.fasterxml.classmate.ResolvedType;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableSet;
+
+
+
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.RequestMethod;
@@ -37,10 +36,13 @@ import springfox.documentation.spi.schema.AlternateTypeProvider;
 import springfox.documentation.spi.schema.GenericTypeNamingStrategy;
 
 import java.lang.annotation.Annotation;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+import java.util.function.Predicate;
 
-import static com.google.common.collect.Lists.*;
+
+import static java.util.stream.Collectors.collectingAndThen;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toSet;
 import static springfox.documentation.builders.BuilderDefaults.*;
 
 public class OperationContext {
@@ -77,7 +79,7 @@ public class OperationContext {
     if (documentationContext.getGlobalResponseMessages().containsKey(RequestMethod.valueOf(forHttpMethod))) {
       return documentationContext.getGlobalResponseMessages().get(RequestMethod.valueOf(forHttpMethod));
     }
-    return newArrayList();
+    return new ArrayList();
   }
 
   public List<Parameter> getGlobalOperationParameters() {
@@ -85,15 +87,14 @@ public class OperationContext {
   }
 
   public List<SecurityContext> securityContext() {
-    return FluentIterable.from(getDocumentationContext().getSecurityContexts())
+    return getDocumentationContext().getSecurityContexts().stream()
         .filter(pathMatches())
-        .toList();
+        .collect(toList());
   }
 
   private Predicate<SecurityContext> pathMatches() {
     return new Predicate<SecurityContext>() {
-      @Override
-      public boolean apply(SecurityContext input) {
+      public boolean test(SecurityContext input) {
         return input.securityForOperation(OperationContext.this) != null;
       }
     };
@@ -127,8 +128,8 @@ public class OperationContext {
     return requestContext.consumes();
   }
 
-  public ImmutableSet<Class> getIgnorableParameterTypes() {
-    return ImmutableSet.copyOf(getDocumentationContext().getIgnorableParameterTypes());
+  public Set<Class> getIgnorableParameterTypes() {
+    return getDocumentationContext().getIgnorableParameterTypes().stream().collect(collectingAndThen(toSet(), Collections::unmodifiableSet));
   }
 
   public GenericTypeNamingStrategy getGenericsNamingStrategy() {
